# Hello_World

./: .gitignore  .pddrc  Dockerfile  README.md  architecture.json  architecture_diagram.html  pdd_cost.csv  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml
.pdd/core_dumps/: pdd-core-20260130T224415Z.json  pdd-core-20260130T230630Z.json  pdd-core-20260130T230641Z.json  pdd-core-20260130T230652Z.json  pdd-core-20260130T230703Z.json  pdd-core-20260130T230726Z.json  pdd-core-20260130T230812Z.json  pdd-core-20260130T230821Z.json  pdd-core-20260130T230831Z.json  pdd-core-20260130T230840Z.json  pdd-core-20260130T231103Z.json  pdd-core-20260131T010143Z.json  pdd-core-20260131T010151Z.json  pdd-core-20260131T010159Z.json  pdd-core-20260131T010230Z.json  pdd-core-20260131T010313Z.json  pdd-core-20260131T010509Z.json  pdd-core-20260131T010515Z.json  pdd-core-20260131T010521Z.json  pdd-core-20260131T010656Z.json  pdd-core-20260131T012123Z.json
prompts/: cli_Python.prompt  main_Python.prompt  models_Python.prompt  storage_Python.prompt  task_model_Python.prompt
tests/: __init__.py
todo/: __init__.py
